--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+@import url("https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20,100..700,0..1,200");
+/* @import url("https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20,100..700,0..1,200"); */
+@import url("https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:wght@100..700");
 @import "tailwindcss";
 
 input::-webkit-outer-spin-button,
